--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
       <div class="lower-sneak ls2">
         <div class="img-div">
           <div class="img-div-content2">
-            <img class="ig2" src="./images/image-product-1.jpg" alt="sneaker image">
+            <img class="ig2" src="./images/image-product-1-thumbnail.jpg" alt="sneaker image">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-2.jpg" alt="sneaker image">
+            <img class="ig2"  src="./images/image-product-2-thumbnail.jpg" alt="sneaker image">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-3.jpg" alt="">
+            <img class="ig2"  src="./images/image-product-3-thumbnail.jpg" alt="">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-4.jpg" alt="sneaker image">
+            <img class="ig2"  src="./images/image-product-4-thumbnail.jpg" alt="sneaker image">
           </div>
         </div>
       </div>
@@ -102,19 +102,19 @@
         <div class="lower-sneak">
           <div class="img-div">
             <div class="img-div-content">
-              <img class="ig" src="./images/image-product-1.jpg" alt="sneaker image">
+              <img class="ig" src="./images/image-product-1-thumbnail.jpg" alt="sneaker image">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-2.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-2-thumbnail.jpg" alt="sneaker image">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-3.jpg" alt="">
+              <img class="ig"  src="./images/image-product-3-thumbnail.jpg" alt="">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-4.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-4-thumbnail.jpg" alt="sneaker image">
             </div>
           </div>
         </div>
