--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -23,6 +23,7 @@
       <div class="left-nav">
         <img src="./images/icon-menu.svg" alt="">
         <div class="logo">
+
           <img src="./images/logo.svg" alt="company logo">
         </div>
         <ul class="nav-list">
@@ -74,19 +75,19 @@
       <div class="lower-sneak ls2">
         <div class="img-div">
           <div class="img-div-content2">
-            <img class="ig2" src="./images/image-product-1-thumbnail.jpg" alt="sneaker image">
+            <img class="ig2" src="./images/image-product-1.jpg" alt="sneaker image">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-2-thumbnail.jpg" alt="sneaker image">
+            <img class="ig2"  src="./images/image-product-2.jpg" alt="sneaker image">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-3-thumbnail.jpg" alt="">
+            <img class="ig2"  src="./images/image-product-3.jpg" alt="">
           </div>
 
           <div class="img-div-content2">
-            <img class="ig2"  src="./images/image-product-4-thumbnail.jpg" alt="sneaker image">
+            <img class="ig2"  src="./images/image-product-4.jpg" alt="sneaker image">
           </div>
         </div>
       </div>
@@ -102,19 +103,19 @@
         <div class="lower-sneak">
           <div class="img-div">
             <div class="img-div-content">
-              <img class="ig" src="./images/image-product-1-thumbnail.jpg" alt="sneaker image">
+              <img class="ig" src="./images/image-product-1.jpg" alt="sneaker image">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-2-thumbnail.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-2.jpg" alt="sneaker image">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-3-thumbnail.jpg" alt="">
+              <img class="ig"  src="./images/image-product-3.jpg" alt="">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-4-thumbnail.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-4.jpg" alt="sneaker image">
             </div>
           </div>
         </div>
