--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav aria-label="primary">
       <div class="left-nav">
-        <img src="./images/icon-menu.svg" alt="">
+        <img class="menu" src="./images/icon-menu.svg" alt="hamburger menu">
         <div class="logo">
 
           <img src="./images/logo.svg" alt="company logo">
@@ -34,7 +34,6 @@
           <li> Contact</li>
         </ul>
       </div>
-  
       <div class="right-nav">
         <div class="cart">
           <div class="cart-count">1</div>
@@ -54,6 +53,17 @@
         </div>
       </div>
     </nav>
+
+    <div role="navigation" class="side">
+      <img class="close-nav" src="./images/icon-close.svg" alt="exit button">
+      <ul class="nav-list2">
+        <li>Collections</li>
+        <li>Men</li>
+        <li>Women</li>
+        <li>About</li>
+        <li> Contact</li>
+      </ul>
+    </div>
    </header>
    <div class="pop-up">
     <div class="left sne-left">
@@ -138,7 +148,7 @@
   
           <div class="discount">
             <p>$125.00 <span class="discount-span">50%</span></p>
-            <span>$250.00</span>
+            <span style="text-decoration: line-through; color: hsl(220, 14%, 75%);">$250.00</span>
           </div>
   
           <div class="cart-div">
@@ -162,7 +172,7 @@
    <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Maobugichi</a>.
     </div>
    </footer>
     
