--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       <div class="left-nav">
         <img class="menu" src="./images/icon-menu.svg" alt="hamburger menu">
         <div class="logo">
-
           <img src="./images/logo.svg" alt="company logo">
         </div>
         <ul class="nav-list">
@@ -113,19 +112,19 @@
         <div class="lower-sneak">
           <div class="img-div">
             <div class="img-div-content">
-              <img class="ig" src="./images/image-product-1.jpg" alt="sneaker image">
+              <img class="ig" src="./images/image-product-1.jpg" alt="sneaker image1">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-2.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-2.jpg" alt="sneaker image2">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-3.jpg" alt="">
+              <img class="ig"  src="./images/image-product-3.jpg" alt="sneaker image3">
             </div>
   
             <div class="img-div-content">
-              <img class="ig"  src="./images/image-product-4.jpg" alt="sneaker image">
+              <img class="ig"  src="./images/image-product-4.jpg" alt="sneaker image4">
             </div>
           </div>
         </div>
@@ -159,7 +158,7 @@
             </div>
   
             <button>
-              <img src="./images/icon-cart.svg" alt="">
+              <img src="./images/icon-cart.svg" alt="cart icon">
               Add to cart
             </button>
           </div>
